--- a/hex-clock/package.json
+++ b/hex-clock/package.json
@@ -13,7 +13,9 @@
     "appDisplayName": "Hex Clock",
     "iconFile": "resources/icon.png",
     "wipeColor": "#ffffff",
-    "requestedPermissions": [],
+    "requestedPermissions": [
+      "access_activity"
+    ],
     "buildTargets": [
       "atlas",
       "vulcan"
